--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   flask-app:
     networks:
@@ -10,9 +8,10 @@ services:
     container_name: flask-app
     ports:
       - "5000:5000"
+    # Integrer le mode develop
     environment:
       FLASK_ENV: "development"
-      DATABASE_URL: "postgresql://user:password@postgres:5432/database"
+      DATABASE_URL: "postgresql://user:password@postgres:5432/mydb"
     depends_on:
       - postgres
     healthcheck:
@@ -36,7 +35,7 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
-      - flask
+      - flask-app
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost"]
       interval: 30s
@@ -56,7 +55,7 @@ services:
     image: postgres:latest
     environment:
       POSTGRES_USER: user
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_PASSWORD: postgres-password
       POSTGRES_DB: mydb
     volumes:
       - postgres-data:/var/lib/postgresql/data
@@ -68,7 +67,7 @@ services:
     networks:
       - app-network
     secrets:
-      - postgres_password
+      - postgres-password
     healthcheck:
       test: ["CMD", "pg_isready", "-U", "user"]
       interval: 30s
@@ -84,6 +83,6 @@ networks:
 volumes:
   postgres-data:
 
-#secrets:
-#  postgres-password:
-#    file: .secrets/postgres-password.txt
+secrets:
+  postgres-password:
+    file: .secrets/postgres-password.txt
